--- a/이것이 코딩테스트다/Chapter 4, 12 구현.ipynb
+++ b/이것이 코딩테스트다/Chapter 4, 12 구현.ipynb
@@ -13,7 +13,21 @@
    "id": "turned-insurance",
    "metadata": {},
    "source": [
-    "## 4-1 상하좌우"
+    "## 4-1 상하좌우(첫 번째)\n",
+    "\n",
+    "- 입력조건\n",
+    "    - 첫째 줄에 공간의 크기를 나타내는 N이 주어진다 (1 <= N <= 100)\n",
+    "    - 둘째 줄에 여행가 A가 이동할 계획서 내용이 주어진다. (1 <= 이동횟수 <= 100)\n",
+    "<br><br>\n",
+    "- 출력조건\n",
+    "    - 첫째 줄에 여행가 A가 최종적으로 도착할 지점의 좌표(X,Y)를 공백으로 구분하여 출력한다.\n",
+    "<br><br>\n",
+    "- 입력예시\n",
+    "    - 5\n",
+    "    - R R R U D D \n",
+    "<br><br>\n",
+    "- 출력예시\n",
+    "    - 3 4"
    ]
   },
   {
@@ -23,7 +37,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 5\n",
@@ -62,6 +76,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db4e4fe3",
+   "metadata": {},
+   "source": [
+    "## 상하좌우(두 번째)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1573d8a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=map(int, input())\n",
+    "step=list(map(str, input().split()))\n",
+    "\n",
+    "x,y=1,1\n",
+    "\n",
+    "for s in step:\n",
+    "    if s == \"R\":y += 1\n",
+    "    if s == \"L\":y -= 1\n",
+    "    if s == \"U\":x -= 1\n",
+    "    if s == \"D\":x += 1\n",
+    "\n",
+    "    if x < 1 : x = 1\n",
+    "    if y < 1 : y = 1\n",
+    "\n",
+    "print(x,y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "impressive-marijuana",
    "metadata": {},
    "source": [
@@ -73,12 +127,29 @@
    "id": "original-worst",
    "metadata": {},
    "source": [
-    "### My"
+    "### My(첫 번째)\n",
+    "\n",
+    "- 정수 N이 입력되면 00시 00분 00초부터 N시 59분 59초까지의 모든 시각 중에서 3이 하나라도 포함되는 모든 경우의 수를 구하는 프로그램을 작성하시오 .예를 들어 1을 입력했을 때 다음은 3이 하나라도 포함되어 있으므로 세어야 하는 시각이다.\n",
+    "\n",
+    "    - 00시 00분 03초\n",
+    "    - 00시 13분 30초\n",
+    "<br><br>\n",
+    "- 입력조건\n",
+    "    - 첫째 줄에 정수 N이 입력된다 (0 <= N <= 23)\n",
+    "    <br><br>\n",
+    "- 출력조건\n",
+    "    - 00시 00분 00초부터 N시 59분 59초까지의 모든 시각 중에서 3이 하나라도 포함되는 모든 경우의 수를 출력한다.\n",
+    "<br><br>\n",
+    "- 입력예시\n",
+    "    - 5\n",
+    "<br><br>\n",
+    "- 출력예시\n",
+    "    - 11475"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 67,
    "id": "fancy-flavor",
    "metadata": {
     "tags": []
@@ -88,16 +159,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0194547176361084\n",
-      "11475\n"
+      "0.00501561164855957\n",
+      "1575\n"
      ]
     }
    ],
    "source": [
     "import datetime\n",
+    "import time\n",
     "\n",
     "# n=map(int, input())\n",
-    "n=5\n",
+    "n=0\n",
     "minute=list(range(0,60))\n",
     "second=list(range(0,60))\n",
     "\n",
@@ -116,6 +188,61 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3de96a9b",
+   "metadata": {},
+   "source": [
+    "### My(두 번째)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "f026796b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11475"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "\n",
+    "cnt = 0\n",
+    "num_list=[i for i in range(60)]\n",
+    "for c in num_list:\n",
+    "    for s in str(c):\n",
+    "        if s == \"3\":\n",
+    "            cnt += 1\n",
+    "            break\n",
+    "\n",
+    "total_cnt = 0\n",
+    "for h in range(n+1):\n",
+    "    if h not in [3,13]:\n",
+    "        # 45*15(분에 3이 없는 경우의 수) + 15*60(분에 3이 있는 경우의 수)\n",
+    "        total_cnt += (60-cnt)*cnt + cnt*60\n",
+    "    else:\n",
+    "        total_cnt += 60*60\n",
+    "\n",
+    "total_cnt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6041ed9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "wicked-contractor",
    "metadata": {},
    "source": [
@@ -124,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "id": "pharmaceutical-compromise",
    "metadata": {},
    "outputs": [
@@ -132,14 +259,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.012937068939208984\n",
-      "11475\n"
+      "0.005005598068237305\n",
+      "3150\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "h=5\n",
+    "h=1\n",
     "cnt = 0\n",
     "\n",
     "start_time=time.time()\n",
@@ -167,6 +294,14 @@
    "metadata": {},
    "source": [
     "### 왕실의 나이트"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42b8b7d6",
+   "metadata": {},
+   "source": [
+    "### My(첫 번째)"
    ]
   },
   {
@@ -274,7 +409,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " h8\n"
@@ -306,6 +441,106 @@
     "\n",
     "go(candidates,x,y)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3809d7d7",
+   "metadata": {},
+   "source": [
+    "### My(두 번째)\n",
+    "\n",
+    "행복 왕국의 왕실 정원은 체스판과 같은 8x8 좌표평면이다. 왕실 정원의 특정한 한 칸에 나이트가 서 있다. 나이트는 매우 충성스로운 신하로서 매일 무술을 연마한다. 나이트는 말을 타고 있기 때문에 이동을 하 때는 L자 형태로만 이동할 수 있으며 정원 밖으로는 나갈 수 없다. 나이트는 특정한 위치에서 다음과 같은 2가지 경우로 이동할 수 있다.\n",
+    "\n",
+    "- 수평으로 두 칸 이동한 뒤에 수직으로 한 칸 이동하기.\n",
+    "- 수직으로 두 칸 이동한 뒤에 수평으로 한 칸 이동하기.\n",
+    "\n",
+    "이처럼 8x8 좌표평면 상에서 나이트의 위치가 주어졌을 때 나이트가 이동할 수 있는 경우의 수를 출력하는 프로그램을 작성하시오. 이 때 왕실의 정원에서 행 위치를 표현할 때는 1부터 8로 표현하며, 열 위치를 표현할 때는 a부터 h로 표현한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "e1a63580",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord(\"a\")-96,ord(\"b\")-96,ord(\"h\")-96\n",
+    "\n",
+    "n=input()\n",
+    "x=ord(n[0])-97\n",
+    "y=int(n[1])-1\n",
+    "\n",
+    "m=[[0 for _ in range(8)] for _ in range(8)]\n",
+    "\n",
+    "m[x][y] = 1\n",
+    "\n",
+    "def go(x,y):\n",
+    "    for dx,dy in [(2,1),(2,-1),(-2,1),(-2,-1),(1,2),(-1,2),(1,-2),(-1,-2)]:\n",
+    "        if x + dx > 0 and x + dx <= 7 and y + dy > 0 and y + dy <= 7 and m[x+dx][y+dy] != 0:\n",
+    "            x,y=x+dx,y+dy\n",
+    "\n",
+    "    return x,y\n",
+    "\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1432a48e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d544007",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efcc6a8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b433c462",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "482528b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
